sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:5: error: not found: value j
    j=i-1
    ^AlgInsertionSort:6: error: not found: value j
    while(getValeur(j)>v){
                    ^AlgInsertionSort:7: error: not found: value j
      copie(j,j-1)
            ^AlgInsertionSort:7: error: not found: value j
      copie(j,j-1)
              ^AlgInsertionSort:8: error: not found: value j
      j-=1
      ^AlgInsertionSort:10: error: not found: value j
    setValeur(j,v)
              ^